# securesockets

./: .gitignore  CMakeLists.txt  README.md
include/: tls.h  tls_async.h
src/: err.c  err_internal.h  original_async.c  original_async.h  original_functions.c  original_functions.h  original_posix.c  original_posix.h  socket.c  socket.h  socket_hashmap.c  socket_hashmap.h
src/wrappers/: async_wrappers.c  socket_wrappers.c  sockopt_wrappers.c
tests/: async_test.cpp  poll_tests.cpp  socket_tests.cpp  test_timeouts.h
